# thai_address

./: .gitignore  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  pyproject.toml  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
raw/: amphures.csv  districts.csv  make_data.py  provinces.csv  thaidbfull_2015-2-27-no-temples.sql  zip_code.csv
src/thai_address/: __init__.py  data.parquet  thai_address.py
tests/: __init__.py  test_thai_address.py
