[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "thai_address"
version = "0.1.0"
description = "A Python package for querying Thai provinces, districts, and subdistricts with ease."
readme = "README.rst"
authors = [
  {name = "Napat Charoenlarpkul", email = "longman_694@hotmail.com"}
]
maintainers = [
  {name = "Napat Charoenlarpkul", email = "longman_694@hotmail.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  "polars[core]"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/longman694/thai_address/issues"
changelog = "https://github.com/longman694/thai_address/blob/master/changelog.md"
homepage = "https://github.com/longman694/thai_address"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]


# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

